--- a/platforms/ios/www/error/index.html
+++ b/platforms/ios/www/error/index.html
@@ -8,12 +8,7 @@
     <meta content='initial-scale=1.0,width=device-width' name='viewport'>
     <meta content='yes' name='apple-mobile-web-app-capable'>
     <meta content='translucent-black' name='apple-mobile-web-app-status-bar-style'>
-    <link href='/images/favicon.ico' rel='shortcut icon'>
-    <link href='/images/apple-touch-icon-precomposed.png' rel='apple-touch-icon-precomposed'>
-    <link href='/images/apple-touch-icon-76x76-precomposed.png' rel='apple-touch-icon-precomposed' sizes='76x76'>
-    <link href='/images/apple-touch-icon-120x120-precomposed.png' rel='apple-touch-icon-precomposed' sizes='120x120'>
-    <link href='/images/apple-touch-icon-152x152-precomposed.png' rel='apple-touch-icon-precomposed' sizes='152x152'>
-    <link href="/stylesheets/application.css?1383387187" media="screen" rel="stylesheet" type="text/css" />
+    <link href='./stylesheets/application.css' media='screen' rel='stylesheet' type='text/css'>
   </head>
   <body class='page'>
     <div class='application-container'>
@@ -21,7 +16,7 @@
       <div class='navbar navbar-default navbar-fixed-top'>
         <div class='container'>
           <div class='pull-left'>
-                  <a href="http://brandymint.com/"><img alt="logo" class="navbar-brand-logo" src="/images/logo.svg?1383387187" />
+                  <a href="http://brandymint.com/"><img alt='logo' class='navbar-brand-logo' src='./images/logo.svg'>
             </a>
       
           </div>
@@ -41,7 +36,7 @@
             <div class='span12'>
               <h2>The content you're looking for cannot be found.</h2>
               <br>
-              <h3><a href="/">Return to homepage.</a></h3>
+              <h3><a href="./">Return to homepage.</a></h3>
             </div>
           </div>
         </div>
